link color on mobile fix

--- a/ora/nav-button.css
+++ b/ora/nav-button.css
@@ -22,7 +22,6 @@
     padding: 0px !important;
     border-radius: 0px!important;
     cursor pointer;
-    opacity: 1 !important;
     background-color: none !important;
 
   }
